tests/parser/errors/match_case_missing_body.mochi
let v = 0
let r = match v { 0 => }
